--- a/examples/miomock/api/package.json
+++ b/examples/miomock/api/package.json
@@ -14,15 +14,15 @@
     "practice": "node dist/practices/$0.js"
   },
   "dependencies": {
-    "@fastify/cookie": "^11.0.2",
-    "@fastify/passport": "^3.0.2",
-    "@fastify/session": "^11.1.0",
+    "@fastify/passport": "^2.2.0",
+    "@fastify/secure-session": "^5.2.0",
     "@swc/core": "^1.13.5",
     "bcrypt": "^6.0.0",
     "chokidar": "^4.0.3",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
-    "fastify": "^5.6.0",
+    "fastify": "^4",
+    "fastify-file-upload": "^4.0.0",
     "fastify-qs": "^5.0.0",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
