--- a/examples/miomock/api/package.json
+++ b/examples/miomock/api/package.json
@@ -14,6 +14,7 @@
     "practice": "node dist/practices/$0.js"
   },
   "dependencies": {
+    "@fastify/multipart": "^8",
     "@fastify/passport": "^2.2.0",
     "@fastify/secure-session": "^5.2.0",
     "@fastify/static": "^7",
@@ -25,6 +26,7 @@
     "fastify": "^4",
     "fastify-file-upload": "^4.0.0",
     "fastify-qs": "^5.0.0",
+    "flydrive": "^1.3.0",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "mime": "^4.1.0",
