--- a/modules/sonamu/package.json
+++ b/modules/sonamu/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@fastify/cors": "^8.1.0",
     "@fastify/formbody": "^7.1.0",
+    "@fastify/multipart": "^8",
     "@swc/core": "^1.13.19",
     "chalk": "^4.1.2",
     "chokidar": "^4.0.3",
@@ -36,6 +37,7 @@
     "fast-deep-equal": "^3.1.3",
     "fastify": "^4.23.2",
     "fastify-qs": "^4.0.0",
+    "flydrive": "^1.3.0",
     "inflection": "^1.13.2",
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
