--- a/modules/ui/package.json
+++ b/modules/ui/package.json
@@ -70,6 +70,7 @@
     "@types/inflection": "^1.13.0",
     "@types/lodash": "^4.14.198",
     "@types/node": "^20.6.3",
+    "@types/prop-types": "^15.7.15",
     "@types/qs": "^6.9.8",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
