chore: root에 build와 miomock 스크립트 추가

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -72,6 +72,9 @@ packageExtensions:
   "@types/react-syntax-highlighter@*":
     dependencies:
       react: "*"
+  "node-fetch@*":
+    dependencies:
+      encoding: "*"
 
 plugins:
   - path: .yarn/plugins/yarn-up-all-plugin.cjs
