--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "modules/docs",
     "modules/create-sonamu"
   ],
+  "scripts": {
+    "build": "yarn workspace @sonamu-kit/react-sui build && yarn workspace @sonamu-kit/ui build && yarn workspace sonamu build",
+    "miomock:api": "yarn workspace miomock-api dev:serve",
+    "miomock:web": "yarn workspace miomock-web dev",
+    "miomock:sonamu-ui": "yarn --cwd examples/miomock/api sonamu ui",
+    "miomock": "run-p miomock:api miomock:web miomock:sonamu-ui"
+  },
   "packageManager": "yarn@4.10.3",
   "devDependencies": {
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "npm-run-all": "^4.1.5"
   }
 }
