[sonamu] @upload 데코레이터, FileStorage, FSDriver 구현

--- a/modules/sonamu/package.json
+++ b/modules/sonamu/package.json
@@ -42,6 +42,7 @@
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "luxon": "^3.0.3",
+    "mime-types": "^3.0.1",
     "minimatch": "^10.0.3",
     "mysql2": "^3.6.1",
     "node-sql-parser": "^5.2.0",
@@ -58,6 +59,7 @@
     "@types/inflection": "^1.13.0",
     "@types/lodash": "^4.14.198",
     "@types/luxon": "^3.0.1",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "^22",
     "@types/prettier": "^3.0.0",
     "@types/prompts": "^2.0.14",
