--- a/modules/react-sui/package.json
+++ b/modules/react-sui/package.json
@@ -55,6 +55,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "corepack": "^0.34.1",
     "lodash": "^4.17.21",
     "prettier": "^3.1.1",
     "scss": "^0.2.4",
