--- a/modules/ui/package.json
+++ b/modules/ui/package.json
@@ -75,6 +75,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "corepack": "^0.34.1",
     "dotenv": "^16.3.1",
     "esbuild": "^0.19.2",
     "npm-run-all": "^4.1.5",
