--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "packageManager": "yarn@4.10.3",
   "devDependencies": {
+    "corepack": "^0.34.1",
     "cowsay": "^1.6.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^5.9.3"
