--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -13,3 +13,8 @@ pnpMode: loose
 plugins:
   - path: .yarn/plugins/yarn-up-all-plugin.cjs
     spec: "https://github.com/e5mode/yarn-up-all/releases/download/1.1.0/index.js"
+
+packageExtensions:
+  debug@*:
+    dependencies:
+      supports-color: "*"
