[workspace] MODULE_NOT_FOUND 에러 픽스 (packageExtensions)

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,7 +4,6 @@ nmHoistingLimits: workspaces
 nodeLinker: pnp
 
 pnpIgnorePatterns:
-  - examples/pp1/web
   - "**/template/*" # create-sonamu/template
 
 pnpUnpluggedFolder: ./.yarn/unplugged
@@ -18,3 +17,17 @@ packageExtensions:
   debug@*:
     dependencies:
       supports-color: "*"
+  vite@*:
+    dependencies:
+      supports-color: "*"
+  react-semantic-ui-datepickers@*:
+    dependencies:
+      react: "*"
+      semantic-ui-react: "*"
+  dazed@*:
+    dependencies:
+      react: "*"
+      prop-types: "*"
+  node-fetch@*:
+    dependencies:
+      encoding: "*"
