--- a/modules/sonamu/package.json
+++ b/modules/sonamu/package.json
@@ -53,7 +53,7 @@
     "qs": "^6.11.0",
     "source-map-support": "^0.5.21",
     "tsicli": "^1.0.5",
-    "zod": "3.25.76"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@sonamu-kit/ui": "workspace:^",
