[workspace] fix: miomock-api 최초 실행시에 dist의 db config가 필요함에도 불구하고 build 스크립트에 miomock-api 빌드가 누락된 문제 해결

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build:react-sui": "cowsay 'react-sui 빌드합니다.' && yarn workspace @sonamu-kit/react-sui build",
     "build:ui": "cowsay 'ui 빌드합니다.' && yarn workspace @sonamu-kit/ui build",
     "build:sonamu": "cowsay 'sonamu 빌드합니다.' && yarn workspace sonamu build",
-    "build": "yarn build:react-sui && yarn build:ui && yarn build:sonamu",
+    "build:miomock-api": "cowsay 'miomock-api 빌드합니다(dist의 db config가 필요하기 때문).' && yarn workspace miomock-api build",
+    "build": "yarn build:react-sui && yarn build:ui && yarn build:sonamu && yarn build:miomock-api",
     "dev:sonamu": "cowsay 'sonamu dev 실행합니다.' && yarn workspace sonamu dev",
     "miomock:api": "cowsay 'miomock api 실행합니다.' && yarn workspace miomock-api dev:serve",
     "miomock:web": "cowsay 'miomock web 실행합니다.' && yarn workspace miomock-web dev",
