[workspace] fix: yarn pnp가 peer dependency 문제 삼는 것 해결
yarn pnp의 규칙:
- peer dependency는 오직 직계 부모(사용처)에서만 제공할 수 있다.
- 패키지는 자기가 직접 dependencies에 명시한 의존성만 사용할 수 있다.

Sonamu가 사용하는 패키지 중, peerDependencies와 함께 배포되는 패키지를 사용하면서도 해당 peer 의존성을 자신의 dependencies에 명시하지 않은 불량(?) 패키지들 때문에 MODULE_NOT_FOUND 에러가 발생한 것으로 보입니다.
이러한 “불량” 패키지들의 package.json 속 “dependencies” 섹션을 patch하기 위해 packageExtensions을 사용하여 직접 peer 의존성을 붙여주었습니다.

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -13,21 +13,68 @@ plugins:
   - path: .yarn/plugins/yarn-up-all-plugin.cjs
     spec: "https://github.com/e5mode/yarn-up-all/releases/download/1.1.0/index.js"
 
+# packageExtensions: Fixes for third-party packages with broken dependency declarations
+# All of these are required to eliminate MODULE_NOT_FOUND errors in Yarn PnP strict mode
 packageExtensions:
-  debug@*:
+  # @types packages missing dependencies
+  "@types/react@*":
     dependencies:
-      supports-color: "*"
-  vite@*:
+      prop-types: "*"
+  "@types/react-dom@*":
     dependencies:
-      supports-color: "*"
-  react-semantic-ui-datepickers@*:
+      react: "*"
+  "@types/react-syntax-highlighter@*":
     dependencies:
+      react: "*"
+  "@types/lodash-es@*":
+    dependencies:
+      lodash: "*"
+
+  # @types/node and undici-types trying to access Node builtins in non-Node context
+  "@types/node@*":
+    dependencies:
+      buffer: "*"
+      punycode: "*"
+      string_decoder: "*"
+  "undici-types@*":
+    dependencies:
+      buffer: "*"
+  "fastify@*":
+    dependencies:
+      buffer: "*"
+
+  # UI library peer dependencies not properly declared
+  "react-semantic-ui-datepickers@*":
+    peerDependencies:
       react: "*"
       semantic-ui-react: "*"
-  dazed@*:
+  "dayzed@*":
     dependencies:
-      react: "*"
       prop-types: "*"
-  node-fetch@*:
+
+  # Build tools missing color support
+  "vite@*":
     dependencies:
-      encoding: "*"
+      supports-color: "*"
+  "debug@*":
+    dependencies:
+      supports-color: "*"
+
+  # Fastify plugins not declaring fastify dependency
+  "@fastify/cors@*":
+    peerDependencies:
+      fastify: "*"
+  "@fastify/formbody@*":
+    peerDependencies:
+      fastify: "*"
+  "@fastify/multipart@*":
+    peerDependencies:
+      fastify: "*"
+  "@fastify/static@*":
+    peerDependencies:
+      fastify: "*"
+  "fastify-qs@*":
+    peerDependencies:
+      fastify: "*"
+      "@types/qs": "*"
+
