--- a/examples/miomock/api/package.json
+++ b/examples/miomock/api/package.json
@@ -39,6 +39,7 @@
     "@types/bcrypt": "^6",
     "@types/lodash": "^4",
     "@types/node": "^24.5.0",
+    "@types/qs": "^6.9.16",
     "@types/source-map-support": "^0",
     "@typescript/native-preview": "^7.0.0-dev.20250923.1",
     "@vitest/coverage-v8": "^3.2.4",
