--- a/modules/react-sui/package.json
+++ b/modules/react-sui/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "corepack": "^0.34.1",
+    "debug": "^4.3.7",
     "lodash": "^4.17.21",
     "prettier": "^3.1.1",
     "scss": "^0.2.4",
