--- a/modules/ui/package.json
+++ b/modules/ui/package.json
@@ -35,11 +35,14 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.4.0",
+    "@fastify/formbody": "^8.0.1",
+    "@fastify/multipart": "^9.0.1",
     "@fastify/static": "^6.10.2",
     "@sonamu-kit/react-sui": "workspace:^",
     "@vitejs/plugin-react": "^4.0.3",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "debug": "^4.3.7",
     "fastify": "^4.21.0",
     "fastify-qs": "^4.0.2",
     "inflection": "^2.0.1",
@@ -47,6 +50,7 @@
     "knex": "^3.1.0",
     "lodash": "^4.17.21",
     "openai": "^4.53.0",
+    "prop-types": "^15.8.1",
     "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -58,6 +62,7 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "sonamu": "workspace:^",
+    "supports-color": "^9.4.0",
     "swr": "^2.2.2",
     "vite": "^4.4.5",
     "zod": "^4.1.12"
@@ -80,7 +85,6 @@
     "esbuild": "^0.19.2",
     "npm-run-all": "^4.1.5",
     "prettier": "2.7.1",
-    "prop-types": "^15.8.1",
     "rollup": "^3.28.0",
     "rollup-plugin-dts": "^5.3.1",
     "rollup-plugin-esbuild": "^5.0.0",
